RESOLVED FIXED260346
alignment-baseline should not support the value "auto"
https://bugs.webkit.org/show_bug.cgi?id=260346
Summary alignment-baseline should not support the value "auto"
Attachments
Radar WebKit Bug Importer
Comment 1 2023-08-17 06:35:51 PDT
Karl Dubost
Comment 2 2023-09-12 08:43:39 PDT
EWS
Comment 3 2023-09-14 17:12:39 PDT
Committed 268008@main (62aac54b7bcd): <https://commits.webkit.org/268008@main> Reviewed commits have been landed. Closing PR #17693 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.