alignment-baseline should not support the value "auto" https://bugs.webkit.org/show_bug.cgi?id=260346 rdar://114024256

Reviewed by Tim Nguyen.

The spec defines alignment-baseline without the value auto
and the initial value being baseline.
https://drafts.csswg.org/css-inline/#alignment-baseline-property

This will also make pass the relevant WPT test
http://wpt.live/css/css-inline/parsing/alignment-baseline-invalid.html

* LayoutTests/fast/css/getComputedStyle/computed-style-expected.txt:
* LayoutTests/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/animation/alignment-baseline-no-interpolation-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/inheritance-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/parsing/alignment-baseline-invalid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-variables/variable-presentation-attribute-expected.txt:
* LayoutTests/svg/css/getComputedStyle-basic-expected.txt:
* Source/WebCore/css/CSSPrimitiveValueMappings.h:
* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/rendering/style/SVGRenderStyle.h:
(WebCore::SVGRenderStyle::initialAlignmentBaseline):
* Source/WebCore/rendering/style/SVGRenderStyleDefs.cpp:
(WebCore::operator<<):
* Source/WebCore/rendering/style/SVGRenderStyleDefs.h:
* Source/WebCore/rendering/svg/SVGTextLayoutEngineBaseline.cpp:
(WebCore::SVGTextLayoutEngineBaseline::dominantBaselineToAlignmentBaseline const):
(WebCore::SVGTextLayoutEngineBaseline::calculateAlignmentBaselineShift const):

Canonical link: https://commits.webkit.org/268008@main